python/testData/highlighting/malformedStringTripleQuoteUnterminated.py
a = 1 # to make the text below non-doc
<error descr="Missing closing triple quotes">"""Hello World</error>"